# p11

./: .gitignore  HTTPd.rb  Makefile  README.md
.github/workflows/: gh-pages.yaml
canvas_docs/: draft.txt  proposal.txt
engine-src/: Makefile  app.py  pyproject.toml
engine-src/dkwk/: __init__.py  asgi.py  can.py  dbi.py  ping.py
engine-src/t/: __init__.py  version.py
public_html/: index.html  kinger.js  robots.txt  scratch.js  style.css
public_html/Manual/: Markup.html  Permission.html
scripts/: hashfile.pl
wiki/: .can
wiki/Manual/: Markup.txt  Permission.txt
